--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "diavgeia-ai-ingest",
+  "name": "diavgeia-ai-backend",
   "version": "1.0.0",
-  "description": "Ingestion script for diavgeia-ai: searches diavgeia for decisions (πράξεις), creates embeddings of attached documents and saves them to chroma.",
+  "description": "Backend for diavgeia.ai",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "ingest": "ts-node src/ingest.ts"
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@types/pdf-parse": "^1.1.1",
-    "@types/yargs": "^17.0.24"
+    "@types/yargs": "^17.0.24",
+    "ts-node": "^10.4.0"
   }
 }
