--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "@supercharge/promise-pool": "^2.4.0",
+    "@types/express": "^4.17.17",
     "@types/pdf": "^0.0.31",
     "@types/pdfjs-dist": "^2.10.378",
     "axios": "^1.3.5",
     "chromadb": "^1.3.1",
+    "cohere": "^1.1.1",
     "cohere-ai": "^6.2.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "openai": "^3.2.1",
     "pdf": "^0.1.0",
     "pdf-parse": "^1.1.1",
