--- a/package.json
+++ b/package.json
@@ -5,21 +5,25 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ingest": "ts-node src/ingest.ts"
+    "ingest": "ts-node src/ingest.ts",
+    "chroma-cli": "ts-node src/chromaCli.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@supercharge/promise-pool": "^2.4.0",
+    "@types/apicache": "^1.6.1",
     "@types/express": "^4.17.17",
     "@types/pdf": "^0.0.31",
     "@types/pdfjs-dist": "^2.10.378",
+    "apicache": "^1.6.3",
     "axios": "^1.3.5",
-    "chromadb": "^1.3.1",
+    "chromadb": "file:~/chromadb-1.3.1.tgz",
     "cohere": "^1.1.1",
     "cohere-ai": "^6.2.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-throttle": "^2.0.0",
     "openai": "^3.2.1",
     "pdf": "^0.1.0",
     "pdf-parse": "^1.1.1",
@@ -27,6 +31,7 @@
     "pdfjs-dist": "^3.5.141",
     "pdfjs-dist-legacy": "^1.0.1",
     "tiktoken-node": "^0.0.5",
+    "tsne-js": "^1.0.3",
     "yargs": "^17.7.1"
   },
   "devDependencies": {
