Implement API_PORT env var

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 OPENAI_API_KEY = YOUR_OPENAI_API_KEY
 COHERE_API_KEY = YOUR_COHERE_API_KEY
 MAX_COST_USD = 0.10
+API_PORT = 3000
 CHROMA_COLLECTION = diavgeia-decisions
