--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,8 @@
-OPENAI_API_KEY = YOUR_OPENAI_API_KEY
-COHERE_API_KEY = YOUR_COHERE_API_KEY
-MAX_COST_USD = 0.10
-API_PORT = 3000
-CHROMA_COLLECTION = diavgeia-decisions
+OPENAI_API_KEY = bar
+COHERE_API_KEY = foo
+MAX_COST_USD = 10.0
+API_PORT = 3001
+NODE_TLS_REJECT_UNAUTHORIZED=0
+POSTGRES_USER=bar
+POSTGRES_PASSWORD=foo
+POSTGRES_DB=test
