When setting up the database connection, use the correct flags

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,5 @@ NODE_TLS_REJECT_UNAUTHORIZED=0
 POSTGRES_USER=bar
 POSTGRES_PASSWORD=foo
 POSTGRES_DB=test
+POTSGRES_HOST=localhost
+POSTGRES_PORT=5432
