--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/pg": "^8.6.6",
     "apicache": "^1.6.3",
     "axios": "^1.3.5",
-    "chromadb": "file:~/chromadb-1.3.1.tgz",
+    "chromadb": "^1.4.1",
     "cohere": "^1.1.1",
     "cohere-ai": "^6.2.0",
     "express": "^4.18.2",
