move server.ts :

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     },
     "include": [
       "src/**/*"
-, "server.ts"    ],
+, "src/server.ts"    ],
     "exclude": [
       "node_modules",
       "dist"
