--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "cli": "ts-node src/cli.ts",
-    "chroma-cli": "ts-node src/chromaCli.ts",
-    "create-db": "dotenv -- bash -c 'psql $DATABASE_URL < sql/db.sql'",
-    "recent-tasks": "dotenv -- bash -c 'psql $DATABASE_URL < sql/recentTasks.sql'"
+    "cli": "ts-node src/cli.ts"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +18,6 @@
     "@types/pg": "^8.6.6",
     "apicache": "^1.6.3",
     "axios": "^1.3.5",
-    "chromadb": "^1.4.1",
     "cohere": "^1.1.1",
     "cohere-ai": "^6.2.0",
     "express": "^4.18.2",
