--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "cli": "ts-node src/cli.ts"
+    "cli": "node dist/cli.js",
+    "build": "rimraf ./dist && tsc && cp ../.env ./dist/.env",
+    "start": "node dist/server.js",
+    "forever": "forever dist/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +28,7 @@
     "openai": "^3.2.1",
     "pdf": "^0.1.0",
     "pdf-parse": "^1.1.1",
+    "chromadb": "^1.0.0",
     "pdfjs": "^2.4.7",
     "pdfjs-dist": "^3.5.141",
     "pdfjs-dist-legacy": "^1.0.1",
@@ -34,11 +38,14 @@
     "yargs": "^17.7.1"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
+    "@types/node": "^18.16.3",
     "@types/pdf-parse": "^1.1.1",
     "@types/yargs": "^17.0.24",
     "dotenv": "^16.0.3",
     "dotenv-cli": "^7.2.1",
-    "ts-node": "^10.4.0"
+    "rimraf": "^5.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4",
+    "forever": "^4.0.1"
   }
 }
