Fix dockerization issue

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -4,14 +4,15 @@ FROM node:16
 # Set the working directory inside the container
 WORKDIR /app
 
+COPY package.json .
+
+RUN npm install
+
 # Copy the rest of the application code into the container
 COPY . .
-
-# Install the required dependencies
-RUN npm i
 
 # Expose the port your application will run on
 EXPOSE 3000
 
 CMD ["npm", "run", "build"]
-CMD ["npm", "run", "forever"]
+CMD ["npm", "run", "start"]
