--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -13,7 +13,7 @@
       "forceConsistentCasingInFileNames": true
     },
     "include": [
-      "src/**/*", "src/server.ts"
+      "src/**/*"
     ],
     "exclude": [
       "node_modules",
