--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "@types/pg": "^8.6.6",
     "apicache": "^1.6.3",
     "axios": "^1.3.5",
+    "chromadb": "^1.0.0",
     "cohere": "^1.1.1",
     "cohere-ai": "^6.2.0",
     "express": "^4.18.2",
@@ -28,23 +29,24 @@
     "openai": "^3.2.1",
     "pdf": "^0.1.0",
     "pdf-parse": "^1.1.1",
-    "chromadb": "^1.0.0",
     "pdfjs": "^2.4.7",
     "pdfjs-dist": "^3.5.141",
     "pdfjs-dist-legacy": "^1.0.1",
     "pg": "^8.10.0",
+    "pgvector": "^0.1.3",
     "tsne-js": "^1.0.3",
     "yargs": "^17.7.1"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
     "@types/pdf-parse": "^1.1.1",
+    "@types/sequelize": "^4.28.15",
     "@types/yargs": "^17.0.24",
     "dotenv": "^16.0.3",
     "dotenv-cli": "^7.2.1",
+    "forever": "^4.0.1",
     "rimraf": "^5.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4",
-    "forever": "^4.0.1"
+    "typescript": "^5.0.4"
   }
 }
