implement dimensionality reduction

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     ports:
-      - "5431:5432"
+      - "${POSTGRES_PORT}:5432"
 
 volumes:
   pgdata:
