--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
     "pg": "^8.10.0",
     "pgvector": "^0.1.3",
     "tsne-js": "^1.0.3",
+    "umap-js": "^1.3.3",
     "yargs": "^17.7.1"
   },
   "devDependencies": {
