Get search to work

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - .env
     depends_on:
       - db
+    ports:
+      - "${API_PORT}:3000"
   db:
     build: db/.
     image: diavgeia-db:latest
