--- a/api/package.json
+++ b/api/package.json
@@ -21,7 +21,7 @@
     "@types/pg": "^8.6.6",
     "apicache": "^1.6.3",
     "axios": "^1.3.5",
-    "chromadb": "^1.0.0",
+    "body-parser": "^1.20.2",
     "cohere": "^1.1.1",
     "cohere-ai": "^6.2.0",
     "express": "^4.18.2",
