--- a/api/package.json
+++ b/api/package.json
@@ -22,10 +22,12 @@
     "apicache": "^1.6.3",
     "axios": "^1.3.5",
     "body-parser": "^1.20.2",
+    "chatgpt": "^5.2.4",
     "cohere": "^1.1.1",
     "cohere-ai": "^6.2.0",
     "express": "^4.18.2",
     "express-throttle": "^2.0.0",
+    "node-fetch": "^3.3.1",
     "openai": "^3.2.1",
     "pdf": "^0.1.0",
     "pdf-parse": "^1.1.1",
@@ -34,6 +36,7 @@
     "pdfjs-dist-legacy": "^1.0.1",
     "pg": "^8.10.0",
     "pgvector": "^0.1.3",
+    "socket.io": "^4.6.1",
     "tsne-js": "^1.0.3",
     "umap-js": "^1.3.3",
     "yargs": "^17.7.1"
@@ -42,6 +45,7 @@
     "@types/node": "^18.16.3",
     "@types/pdf-parse": "^1.1.1",
     "@types/sequelize": "^4.28.15",
+    "@types/socket.io": "^3.0.2",
     "@types/yargs": "^17.0.24",
     "dotenv": "^16.0.3",
     "dotenv-cli": "^7.2.1",
