--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "cohere-ai": "^6.2.0",
     "express": "^4.18.2",
     "express-throttle": "^2.0.0",
+    "limiter": "^2.1.0",
     "node-fetch": "^3.3.1",
     "openai": "^3.2.1",
     "pdf": "^0.1.0",
